--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 #root {
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .app {
@@ -8,12 +11,13 @@
   margin: auto;
   gap: 2rem;
   max-width: 1480px;
-  width: 100%;
+  width: 80%;
 }
 
 .cv-container {
   margin-top: 3rem;
   width: 100%;
+  box-shadow: 10px 5px 3rem rgba(0,0,0,0.5);
   
 }
 
@@ -31,4 +35,44 @@
 .general-info > h1 {
   margin: 0;
   font-size: 2rem;
+}
+
+.cv-heading {
+  background: rgba(0,0,0,0.1);
+  font-weight: 600;
+  width: 80%;
+  text-align: center;
+  padding: 0.1rem;
+  margin: 3rem auto;
+}
+
+
+.form-container {
+  border: 0.2rem solid black;
+  padding: 1rem 2rem;
+  border-radius: 2rem;
+  margin: 2rem 0;
+}
+
+.input-group {
+  margin: 0.6rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+}
+
+.info-format {
+  display: flex;
+  gap: 2rem;
+  margin-left: 10%;
+}
+
+.info-format > div {
+  display: flex;
+  flex-direction: column;
+}
+
+.info-heading {
+  font-weight: 600;
+  font-size: 1.2rem;
 }
